# vqvae

./: .gitignore  AGENTS.md  LICENSE  README.md  evaluation.py  install.sh  pyproject.toml  train.py
.github/workflows/: pytest.yml
configs/: config_gcpnet_encoder.yaml  config_geometric_decoder.yaml  config_vqvae.yaml  evaluation_config.yaml  inference_codebook_extraction_config.yaml  inference_decode_config.yaml  inference_embed_config.yaml  inference_encode_config.yaml
configs/pretrained/: structure_denoising_pretrained_config.yaml
data/: dataset.py
src/gcpvqvae/: __init__.py  cli.py
src/gcpvqvae/configs/: README.md  base.yaml  gcpnet_pretrain.yaml  pilot.yaml  small.yaml  xsmall.yaml
src/gcpvqvae/data/: batch.py  dataset.py  featurize.py  mmcif.py  pdb_hdf5.py  preprocess.py  preprocessing_OLD.py  protein_io.py  reference_preprocessing.py
src/gcpvqvae/data/reference/: __init__.py  preprocessing.py
src/gcpvqvae/geometry/: frames.py  metrics.py  ops.py  torsion.py
src/gcpvqvae/models/: decoder.py  decoders.py  gcpcore.py  gcpnet.py  gcpvqvae.py  gcpvqvae_model.py  losses.py  transformer.py  vq.py
src/gcpvqvae/system/: config_validation.py  configuration.py  eval.py  train.py  train_gcpnet.py
src/gcpvqvae/utils/: checkpoint.py  logging.py  seed.py
tests/: README.md  conftest.py  test_cli_config_validation.py  test_cli_preprocess.py  test_configuration_overrides.py  test_data_pipeline.py  test_dataset_parallel.py  test_decoder.py  test_end_to_end.py  test_eval.py  test_frames.py  test_gcpnet.py  test_losses.py  test_metrics.py  test_model_api.py  test_pdb_hdf5.py  test_pdb_to_hdf5_integration.py  test_preprocessing.py  test_reference_preprocessing_module.py  test_train.py  test_vq.py
tests/data/: dummy_A.cif
tests/test_data/: reference_h5_expected.py
tests/test_data/cif_50/: 1A2N.cif  1B0I.cif  1B9V.cif  1BEM.cif  1BTP.cif  1CHG.cif  1DXH.cif  1E6U.cif  1E9A.cif  1EQ7.cif  1EYC.cif  1FMK.cif  1FU7.cif  1FX8.cif  1GZD.cif  1H98.cif  1IEJ.cif  1IFA.cif  1IMV.cif  1J09.cif  1J22.cif  1JF8.cif  1JOI.cif  1JWP.cif  1KGW.cif  1KM3.cif  1KS7.cif  1MRY.cif  1N9X.cif  1NG1.cif  1NGD.cif  1OBC.cif  1OMJ.cif  1OX3.cif  1PGN.cif  1QMT.cif  1RL6.cif  1RZ6.cif  1S0Q.cif  1TGJ.cif  (+7 more)
utils/: custom_losses.py  utils.py
