[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gcpvqvae"
version = "0.0.1"
authors = [
  { name="Jules", email="jules@example.com" },
]
description = "A PyTorch implementation of GCP-VQVAE for protein backbone tokenization"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "torch>=2.3",
    "numpy",
    "einops",
    "scipy",
    "gemmi",
    "biopython",
    "pyyaml",
    "tensorboard",
    "click",
    "tqdm",
]

[project.scripts]
gpcvq = "gcpvqvae.cli:main"
