[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vqvae"
version = "0.1.0"
description = "Geometry-complete protein VQVAE with GCPNet encoder"
readme = "README.md"
authors = [
    { name = "Bryan Briney" }
]
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "torch>=2.3",
    "numpy",
    "einops",
    "scipy",
    "gemmi",
    "biopython",
    "pyyaml",
    "hydra-core>=1.3"
]

[project.optional-dependencies]
viz = ["tensorboard"]

[project.scripts]
gpcvq = "gcpvqvae.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
